--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "atlantjs-miscellaneous",
   "displayName": "Atlantjs Miscellaneous",
   "description": "The main generic extensions to leave your VSCode flying!",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "publisher": "Atlantjs",
   "repository": "https://gitlab.com/matheusantonio2081/extension-atlantjs-miscellaneous",
   "icon": "icon.png",
@@ -17,6 +17,7 @@
   ],
   "extensionPack": [
     "mongodb.mongodb-vscode",
+    "deerawan.vscode-faker",
     "VirejDasani.incredibly-in-your-face",
     "VirejDasani.in-your-face",
     "adpyke.codesnap",
