refactor: add news extensions

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "atlantjs-miscellaneous",
   "displayName": "Atlantjs Miscellaneous",
   "description": "The main generic extensions to leave your VSCode flying!",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "publisher": "Atlantjs",
   "repository": "https://gitlab.com/matheusantonio2081/extension-atlantjs-miscellaneous",
   "icon": "icon.png",
@@ -21,7 +21,10 @@
     "VirejDasani.incredibly-in-your-face",
     "VirejDasani.in-your-face",
     "adpyke.codesnap",
+    "quicktype.quicktype",
+    "plibither8.remove-comments",
     "eightHundreds.vscode-drawio",
+    "eliostruyf.vscode-hide-comments",
     "purocean.drawio-preview",
     "janisdd.vscode-edit-csv",
     "yokawasa.jwt-debugger",
