add rest-client, pieces, add ai docs and comments, drawio

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "atlantjs-miscellaneous",
   "displayName": "Atlantjs Miscellaneous",
   "description": "The main generic extensions to leave your VSCode flying!",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "publisher": "Atlantjs",
   "repository": "https://gitlab.com/matheusantonio2081/extension-atlantjs-miscellaneous",
   "icon": "icon.png",
@@ -17,14 +17,19 @@
   ],
   "extensionPack": [
     "mongodb.mongodb-vscode",
+    "humao.rest-client",
     "deerawan.vscode-faker",
     "VirejDasani.incredibly-in-your-face",
     "VirejDasani.in-your-face",
     "adpyke.codesnap",
+    "MeshIntelligentTechnologiesInc.pieces-vscode",
     "quicktype.quicktype",
+    "CodamaSoftware.ai-docs-and-comments",
     "plibither8.remove-comments",
-    "eightHundreds.vscode-drawio",
+    "arcanis.vscode-zipfs",
     "eliostruyf.vscode-hide-comments",
+    "hediet.vscode-drawio",
+    "eightHundreds.vscode-drawio",
     "purocean.drawio-preview",
     "janisdd.vscode-edit-csv",
     "yokawasa.jwt-debugger",
