--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "Extension Packs"
   ],
   "extensionPack": [
+    "ryu1kn.partial-diff",
+    "arcanis.vscode-zipfs",
     "mongodb.mongodb-vscode",
     "humao.rest-client",
     "deerawan.vscode-faker",
